# simula

./: .gitignore  LICENSE  MANIFEST.in  PLAN.md  PRINCIPLES.md  README.md  pyproject.toml  simula.toml.example
.github/workflows/: publish.yml
docs/: _config.yml  configuration.md  design.md  getting-started.md  index.md  principles.md
grammars/: turn_output.gbnf
resources/: README.md
resources/examples/: life-ai-crossroads-engine.md
resources/genres/: dramatic-situations-polti.md  genre-taxonomy.md
resources/persona/: distilling-from-conversations.md  persona-blueprint-design.md  persona-modeling.md
resources/personas/: elias-thorne.persona.json  mira-the-archivist.persona.json
resources/worldbuilding/: blueprint-design-principles.md  interactive-fiction-and-branching-narrative.md  zork-world-model.md
resources/worlds/: ashgrove-manor.world.json  kipple.world.json
schemas/: persona_blueprint.schema.json  persona_state.schema.json  turn_output.schema.json  world_blueprint.schema.json  world_state.schema.json
simula/: __init__.py  __main__.py  backends.py  config.py  distill.py  eval.py  loop.py  play.py  rag.py  workspace.py
tests/: test_backends.py  test_cli.py  test_distill.py  test_eval.py  test_loop.py  test_persona_distill.py  test_personas.py  test_play.py  test_rag.py  test_schemas.py
