[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simula"
version = "0.1.0"
description = "Lokalno-prvi pogon za sazdavanje i naseljavanje svetova i persona iz korisnikovih materijala."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Peter Ofovik", email = "pedjaurosevic@gmail.com" }]
keywords = ["llm", "simulation", "worldbuilding", "persona", "local-first", "llama.cpp", "gbnf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=4.0",
]

[project.optional-dependencies]
openai = ["requests>=2.28"]
embeddings = ["sentence-transformers>=2.2"]

[project.urls]
Homepage = "https://github.com/pedjaurosevic/simula"
Repository = "https://github.com/pedjaurosevic/simula"

[project.scripts]
simula = "simula.__main__:main"

[tool.setuptools]
packages = ["simula"]

[tool.setuptools.package-data]
simula = ["py.typed"]
